--- a/src/main/webapp/WEB-INF/fragments/header.jspf
+++ b/src/main/webapp/WEB-INF/fragments/header.jspf
@@ -1,2 +1,12 @@
-<link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css" />
+<%@ page language="java" contentType="text/html; charset=ISO-8859-1"
+	pageEncoding="ISO-8859-1"%>
+<%@ taglib prefix="spring" uri="http://www.springframework.org/tags"%>
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
+<%@ taglib prefix="form" uri="http://www.springframework.org/tags/form"%>
+<spring:theme code="stylesheet" var="themeName" />
+<link href='<spring:url value="/css/theme/${themeName}"/>' rel="stylesheet" />
+<!-- <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css" /> -->
 <link href="/css/main.css" rel="stylesheet">
+
+<link
+	rel="stylesheet" href="/webjars/font-awesome/css/all.css">
